# Astral

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config.json
.github/workflows/: build.yml
cmake/: AstralConfig.cmake.in
docs/: GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_TIMELINE.md
docs/architecture/: ARCHITECTURE.md
docs/optimization/: OPTIMIZATION_TECHNIQUES.md
docs/physics/: CELL_SYSTEM.md  IMPLEMENTATION_NOTES.md  NOITA_PHYSICS_PLAN.md  PHYSICS_SYSTEM.md
docs/rendering/: RENDERING_SYSTEM.md
docs/tools/: DEVELOPMENT_TOOLS.md
examples/: CMakeLists.txt  README.md  basic_sand_physics.cpp  cellular_fluid_test.cpp  large_world_test.cpp  lava_interactions_test.cpp  material_interactions_test.cpp  physics_sandbox_example.cpp  test_physics.cpp  water_simulation_test.cpp
include/astral/core/: Config.h  Engine.h  Logger.h  Profiler.h  Timer.h
include/astral/physics/: Cell.h  CellProcessor.h  CellularAutomaton.h  CellularPhysics.h  CellularPhysics.recovered.h  ChunkManager.h  Material.h  PhysicsSystem.h
include/astral/rendering/: Renderer.h  RenderingSystem.h
include/astral/tools/: DebugUI.h
include/glad/: glad.h
output/: interactions.txt
scripts/: build.sh  run.sh  setup_vcpkg.sh
src/: CMakeLists.txt  main.cpp
src/core/: Config.cpp  Engine.cpp  Logger.cpp  Profiler.cpp  Timer.cpp
src/glad/: glad.c
src/physics/: Cell.cpp  CellProcessor.cpp  CellularAutomaton.cpp  CellularPhysics.cpp  ChunkManager.cpp  Material.cpp
src/tools/: DebugUI.cpp
tests/: CMakeLists.txt
tests/unit/core/: ConfigTests.cpp  LoggerTests.cpp  ProfilerTests.cpp  TimerTests.cpp
tests/unit/physics/: CellTests.cpp  CellularAutomatonTests.cpp  MaterialTests.cpp
